chores: simplify code
